# Qwen-compress

./: .gitignore  .pre-commit-config.yaml  LICENSE  MOT-FD_DISTILLATION.md  README.md  README.md.bak  README_zh.md  pyproject.toml  requirements.txt
configs/distill/: qwen2_5_14b_to_3b.yaml
configs/pipeline/: full.yaml
configs/prune/: sparsegpt_50pct.yaml  sparsegpt_perm_2_4.yaml
configs/qat/: int8_qad.yaml
data/: convert_gsm8k.py
examples/: quick_start.py
scripts/: run_distill.sh  run_pipeline.sh  run_prune.sh  run_qat.sh  split_dataset.py  test_distill.py
src/qwen_compress/: __init__.py  _version.py  cli.py
src/qwen_compress/cot_generator/: README.md  __init__.py  data_loader.py  expander.py  formatter.py  generator.py  pipeline.py  prompts.py  run.py  validator.py
src/qwen_compress/cot_generator/configs/: pipeline.json
src/qwen_compress/cot_generator/data/seeds/: example_seeds.jsonl
src/qwen_compress/data/: __init__.py  calibration_data.py  cot_dataset.py
src/qwen_compress/distill/: __init__.py  groupwise.py  losses.py  trainer.py
src/qwen_compress/models/: __init__.py  qwen_wrapper.py
src/qwen_compress/prune/: __init__.py  permutation.py  recovery.py  sparsegpt.py  utils.py
src/qwen_compress/qat/: __init__.py  calibration.py  export.py  fake_quant.py  qad_trainer.py
src/qwen_compress/utils/: __init__.py  checkpoint.py  config.py  dist.py  logging.py  seed.py
tests/: test_config.py  test_cot_dataset.py  test_fake_quant.py  test_groupwise.py  test_losses.py  test_permutation.py  test_prune_utils.py
