[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-compress"
version = "0.1.0"
description = "Production-grade LLM compression toolkit for Qwen: Group-wise Distillation + SparseGPT Pruning + QAT/QAD."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "qwen-compress contributors" }
]
keywords = [
    "llm",
    "compression",
    "distillation",
    "pruning",
    "quantization",
    "qat",
    "qwen",
    "sparsegpt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "datasets>=2.14.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
export = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]
tracking = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
]
all = [
    "qwen-compress[dev,export,tracking]",
]

[project.urls]
Homepage = "https://github.com/your-org/qwen-compress"
Documentation = "https://github.com/your-org/qwen-compress#readme"
Repository = "https://github.com/your-org/qwen-compress"
Issues = "https://github.com/your-org/qwen-compress/issues"

[project.scripts]
qwen-compress = "qwen_compress.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qwen_compress*"]

[tool.setuptools.package-data]
qwen_compress = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
    "N812",  # lowercase imported as non-lowercase
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.9"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=qwen_compress --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
]
